--- a/contact.html
+++ b/contact.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="css/magnific-popup.css">
     <link rel="stylesheet" href="css/jquery-ui.css">
     <link rel="stylesheet" href="css/owl.carousel.min.css">
+	<link rel="stylesheet" href="fonts/knowho/style.css">
     <link rel="stylesheet" href="css/owl.theme.default.min.css">
     <link rel="stylesheet" href="css/lightgallery.min.css">    
     <link rel="stylesheet" href="css/bootstrap-datepicker.css">
@@ -45,14 +46,14 @@
         <div class="row align-items-center">
           
           <div class="col-6 col-xl-2" data-aos="fade-down">
-                        <img class="col-4" src="images/logo.png" alt="Images" class="img-fluid" style="position: relative;right: 20px;top: 1px" />
-                        <h1 class="mb-0"><a href="intro.html" class="text-black h2 mb-0" style="position: absolute;right: 10px;top: 6px">KnowHow'19</a></h1>
+                         <h1 class="eventlogo display-4 mb-0"><a href="intro.html" class="text-black h2 mb-0">KnowHow'19</a></h1>
           </div>
           <div class="col-10 col-md-8 d-none d-xl-block" data-aos="fade-down">
             <nav class="site-navigation position-relative text-right text-lg-center" role="navigation">
 
               <ul class="site-menu js-clone-nav mx-auto d-none d-lg-block">
                                 <li><a href="index.html">Home</a></li>
+								<li><a href="intro.html">Intro</a></li>
                                 <li class="has-children">
                                     <a href="events.html">Events</a>
                                     <ul class="dropdown">
@@ -191,7 +192,7 @@
             </div>
         </div>
 
-<div class="footer py-4">
+        <div class="footer py-4">
             <div class="container-fluid text-center">
                 <p>
                     <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
@@ -199,7 +200,7 @@
                         <span class="icon">
                             <i class="fa fa-github"></i>
                         </span>
-                    </a>Developed by RajeshPandey057 Copyright &copy;<script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
+                    </a>Copyright &copy;<script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
                     <script>
                         document.write(new Date().getFullYear());
 
